<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.PermissionActivity"
        android:background="@color/white">

    <badda3mon.lockscreen.views.RobotoTextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/permission_app_name_tv"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:textAllCaps="true"/>

    <badda3mon.lockscreen.views.RobotoTextView
            android:text="@string/permission_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/permission_hint_tv"
            android:textColor="#FF777777"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_below="@id/permission_app_name_tv"
            android:layout_marginTop="50dp"/>

    <badda3mon.lockscreen.views.RobotoTextView
            android:text="@string/permission_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/permission_list_tv"
            android:textColor="#FF777777"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_below="@id/permission_hint_tv"
            android:layout_marginTop="30dp"
            android:minLines="4"
            android:maxLines="12"/>

    <Button
            android:text="OK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/permission_ok_btn"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp"
            android:backgroundTint="@color/buttons_bg_color"/>
</RelativeLayout>