<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFFFF">

    <badda3mon.lockscreen.views.RobotoTextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settings_app_name_tv"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textAllCaps="true"/>

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/level_rg"
            android:layout_below="@id/settings_app_name_tv"
            android:layout_alignStart="@id/settings_app_name_tv"
            android:layout_alignEnd="@id/settings_app_name_tv"
            android:layout_marginTop="50dp">

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/view"
                android:background="#77777777"/>

        <RadioButton
                android:text="Level 1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/level1_rb"
                android:textAlignment="textStart"
                android:layoutDirection="rtl"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                />

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/view2"
                android:background="#77777777"/>

        <RadioButton
                android:text="Level 2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/level2_rb"
                android:textAlignment="textStart"
                android:layoutDirection="rtl"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                />

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/view3"
                android:background="#77777777"/>

        <RadioButton
                android:text="Level 3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/level3_rb"
                android:textAlignment="textStart"
                android:layoutDirection="rtl"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                />

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/view4"
                android:background="#77777777"/>

        <RadioButton
                android:text="Level 4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/level4_rb"
                android:textAlignment="textStart"
                android:layoutDirection="rtl"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                />

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/view5"
                android:background="#77777777"/>

        <RadioButton
                android:text="Level 5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/level5_rb"
                android:textAlignment="textStart"
                android:layoutDirection="rtl"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                />

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/view6"
                android:background="#77777777"/>

    </RadioGroup>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_phone_layout"
            android:layout_below="@id/level_rg"
            android:layout_alignStart="@id/level_rg"
            android:layout_alignEnd="@id/level_rg"
            android:layout_marginTop="20dp">

        <badda3mon.lockscreen.views.RobotoTextView
                android:text="@string/first_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/first_phone_tv"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:textAllCaps="true"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/first_phone_et"
                android:hint="+7495555555"
                android:singleLine="true"
                android:gravity="center"
                android:textSize="34sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:textColorHint="#FF777777"
                android:textColorHighlight="@color/black"
                android:textColorLink="@color/black"
                android:textCursorDrawable="@null"
                android:layout_below="@id/first_phone_tv"
                android:digits="0123456789+"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/second_phone_layout"
            android:layout_below="@id/first_phone_layout"
            android:layout_alignStart="@id/level_rg"
            android:layout_alignEnd="@id/level_rg"
            android:layout_marginTop="20dp">

        <badda3mon.lockscreen.views.RobotoTextView
                android:text="@string/second_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/second_phone_tv"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:textAllCaps="true"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/second_phone_et"
                android:hint="+7495555555"
                android:singleLine="true"
                android:gravity="center"
                android:textSize="34sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:textColorHint="#FF777777"
                android:textColorHighlight="@color/black"
                android:textColorLink="@color/black"
                android:textCursorDrawable="@null"
                android:layout_below="@id/second_phone_tv"
                android:digits="0123456789+"/>
    </RelativeLayout>

    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_btn"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp"
            android:backgroundTint="@color/buttons_bg_color"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"/>

</RelativeLayout>